# PyTorrent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/desktop/: README.md
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/public/: manifest.webmanifest  sw.js
apps/web/src/: App.tsx  DiscoverMovies.tsx  appOutletContext.ts  index.css  main.tsx
apps/web/src/catalog/: browse.ts  homeRowSpecs.ts  homeRowsConfig.ts  types.ts
apps/web/src/components/: ContentRow.tsx  ContinueWatchingRow.tsx  HeroBanner.tsx  MyListRow.tsx  OnboardingModal.tsx  PosterCard.tsx  PosterImage.tsx  ResumePlaybackRow.tsx  TitleDetailModal.tsx
apps/web/src/layout/: AppLayout.tsx
apps/web/src/lib/: dashboardSettings.ts  jobMeta.ts  lastCatalogTitle.ts  (+2 more)
contrib/mcp/: README.md
docs/: CONFIGURATION.md  USER_GUIDE.md  UX_ROADMAP.md
packaging/: README.md  pytorrentd.spec  torflixd.spec
src/pytorrent/: __init__.py  bencoding.py  magnet.py  metadata_fetch.py  paths.py  piece_picker.py  piece_state.py  session.py  storage.py  torrent.py  tracker.py  udp_tracker.py
src/pytorrent/protocol/: __init__.py  incoming.py  messages.py  peer.py  stream.py
src/pytorrentd/: __init__.py  __main__.py  app.py  catalog_image_proxy.py  torflix_env.py  torrent_api_app.py  torrent_api_client.py  user_store.py  yts_catalog_client.py
src/pytorrentd/vendor_torrent_api/: VENDOR_README.md
tests/: test_bencoding.py  test_catalog_image_proxy.py  test_daemon.py  test_magnet.py  test_yts_api.py
tests/fixtures/: yts_list_movies_sample.json
(+13 files in other folders)
